cluster/apps/traefik/traefik/ingress/brave-search-mcp/api-key-auth.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/middleware_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-key-auth-brave-search-mcp
  namespace: brave-search-mcp
spec:
  plugin:
    traefik-api-key-auth:
      authenticationHeader: true
      authenticationHeaderName: X-API-KEY
      bearerHeader: false
      removeHeadersOnSuccess: true
      keys:
        - "env:BRAVE_SEARCH_MCP_API_KEY"
